--- a/Grunt/package.json
+++ b/Grunt/package.json
@@ -12,9 +12,10 @@
         "grunt-contrib-watch": "^0.6.1",
         "grunt-msbuild": "^0.3.4",
         "grunt-umbraco-package": "^1.0.0",
-        "grunt-dotnet-assembly-info": "^1.0.19"
+        "grunt-dotnet-assembly-info": "^1.0.19",
+        "grunt-nuget": "^0.1.5"
     },
-    "meta": { 
-        "version":  "0.9.0.2"
+    "meta": {
+        "version": "0.9.0.2"
     }
 }
