--- a/Samples/Advanced custom field/My.Range/My.Range.csproj
+++ b/Samples/Advanced custom field/My.Range/My.Range.csproj
@@ -72,6 +72,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
+    <Reference Include="FormEditor, Version=0.9.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FormEditor.Binaries.0.9.0.2\lib\net40\FormEditor.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -283,12 +287,6 @@
   <ItemGroup>
     <Compile Include="MyRangeField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Source\Solution\FormEditor\FormEditor.csproj">
-      <Project>{868a44e0-c7fc-4297-a4e8-3e2ddf8e53e0}</Project>
-      <Name>FormEditor</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Plugins\FormEditor\editor\fields\my.range.html" />
