--- a/Samples/SQL storage index/FormEditor.SqlIndex.csproj
+++ b/Samples/SQL storage index/FormEditor.SqlIndex.csproj
@@ -63,6 +63,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
+    <Reference Include="FormEditor, Version=0.9.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FormEditor.Binaries.0.9.0.2\lib\net40\FormEditor.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -260,12 +264,6 @@
     <Compile Include="Storage\File.cs" />
     <Compile Include="Storage\Index.cs" />
     <Compile Include="Storage\Entry.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FormEditor\FormEditor.csproj">
-      <Project>{868a44e0-c7fc-4297-a4e8-3e2ddf8e53e0}</Project>
-      <Name>FormEditor</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
