--- a/Samples/Elastic storage index/packages.config
+++ b/Samples/Elastic storage index/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.0.0" targetFramework="net45" />
   <package id="ClientDependency" version="1.8.4" targetFramework="net45" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="1.6.0" targetFramework="net45" />
   <package id="Examine" version="0.1.68.0" targetFramework="net45" />
   <package id="FormEditor.Binaries" version="0.9.0.4" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
@@ -32,6 +33,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
+  <package id="NEST" version="1.6.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="semver" version="1.1.2" targetFramework="net45" />
