--- a/Samples/SQL storage index/FormEditor.SqlIndex.csproj
+++ b/Samples/SQL storage index/FormEditor.SqlIndex.csproj
@@ -63,8 +63,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
-    <Reference Include="FormEditor">
-      <HintPath>..\packages\FormEditor.Binaries.0.9.0.4\lib\net40\FormEditor.dll</HintPath>
+    <Reference Include="FormEditor, Version=0.10.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FormEditor.Binaries.0.10.0.1\lib\net40\FormEditor.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
