Add member info field

--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -270,6 +270,8 @@
     <Compile Include="EmailRenderer.cs" />
     <Compile Include="FieldHelper.cs" />
     <Compile Include="Fields\CustomField.cs" />
+    <Compile Include="Fields\IEmailField.cs" />
+    <Compile Include="Fields\MemberInfoField.cs" />
     <Compile Include="Fields\UrlField.cs" />
     <Compile Include="Fields\IFieldWithValidation.cs" />
     <Compile Include="Fields\IFieldWithHelpText.cs" />
