--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -271,6 +271,7 @@
     <Compile Include="FieldHelper.cs" />
     <Compile Include="Fields\CustomField.cs" />
     <Compile Include="Fields\IEmailField.cs" />
+    <Compile Include="Fields\LinkField.cs" />
     <Compile Include="Fields\MemberInfoField.cs" />
     <Compile Include="Fields\UrlField.cs" />
     <Compile Include="Fields\IFieldWithValidation.cs" />
