--- a/Samples/Advanced custom field/My.Fields.csproj
+++ b/Samples/Advanced custom field/My.Fields.csproj
@@ -72,9 +72,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
-    <Reference Include="FormEditor, Version=0.12.0.1, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="FormEditor, Version=0.12.1.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\FormEditor.Binaries.0.12.0.1\lib\net40\FormEditor.dll</HintPath>
+      <HintPath>..\packages\FormEditor.Binaries.0.12.1.1\lib\net40\FormEditor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
