--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Events\FormEditorCancelEventHandler.cs" />
     <Compile Include="Events\FormEditorEventArgs.cs" />
     <Compile Include="Events\FormEditorEventHandler.cs" />
+    <Compile Include="Fields\Statistics\FieldExtensions.cs" />
     <Compile Include="Fields\Statistics\IValueFrequencyStatisticsField.cs" />
     <Compile Include="Fields\Statistics\IStatisticsField.cs" />
     <Compile Include="Fields\TelephoneField.cs" />
@@ -318,6 +319,7 @@
     <Compile Include="Storage\IndexHelper.cs" />
     <Compile Include="Storage\IIndex.cs" />
     <Compile Include="Storage\Index.cs" />
+    <Compile Include="Storage\Statistics\FieldValueFrequencies.cs" />
     <Compile Include="Storage\Statistics\FieldValueFrequency.cs" />
     <Compile Include="Storage\Statistics\FieldValueFrequencyStatistics.cs" />
     <Compile Include="Storage\Statistics\IStatisticsIndex.cs" />
