--- a/Samples/Custom validation condition/My.Conditions.csproj
+++ b/Samples/Custom validation condition/My.Conditions.csproj
@@ -66,9 +66,9 @@
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FormEditor, Version=0.13.2.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FormEditor.Binaries.0.13.2.1\lib\net40\FormEditor.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="FormEditor, Version=0.13.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FormEditor.Binaries.0.13.3.1\lib\net40\FormEditor.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
