--- a/Samples/Event handling/My.Events.csproj
+++ b/Samples/Event handling/My.Events.csproj
@@ -57,8 +57,9 @@
     <Reference Include="Examine">
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
-    <Reference Include="FormEditor, Version=0.13.2.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FormEditor.Binaries.0.13.2.1\lib\net40\FormEditor.dll</HintPath>
+    <Reference Include="FormEditor, Version=0.13.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FormEditor.Binaries.0.13.3.1\lib\net40\FormEditor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack">
