--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -2,7 +2,7 @@
 <FormEditor>
   <!-- add your custom fields here -->
   <CustomFields>
-    <!--<Field type="my.custom.field" name="My custom field" fixedOptions="false" />-->
+    <!--<Field type="my.custom.field" name="My custom field" fixedValues="false" />-->
   </CustomFields>
 
   <!-- setup your custom storage index here -->
