--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -5,7 +5,12 @@
     <!--<Field type="my.custom.field" name="My custom field" fixedValues="false" />-->
   </CustomFields>
 
-  <!-- setup your custom storage index here -->
+  <!-- 
+    setup your custom storage index here 
+
+    the SQL storage index mentioned below is not a part of the Form Editor core. you'll find it 
+    among the sample projects at https://github.com/kjac/FormEditor/tree/master/Samples
+  -->
   <Storage>
     <!--<Index type="FormEditor.SqlIndex.Storage.Index, FormEditor.SqlIndex" />-->
   </Storage>
