Introduce provider based handling of max submissions per user

--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -305,6 +305,9 @@
     <Compile Include="Api\PropertyEditorController.cs" />
     <Compile Include="Fields\Field.cs" />
     <Compile Include="FormModel.cs" />
+    <Compile Include="Limitations\IMaxSubmissionsForCurrentUserHandler.cs" />
+    <Compile Include="Limitations\LimitationsHelper.cs" />
+    <Compile Include="Limitations\MaxSubmissionsForCurrentUserHandler.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
