--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -14,4 +14,12 @@
   <Storage>
     <!--<Index type="FormEditor.SqlIndex.Storage.Index, FormEditor.SqlIndex" />-->
   </Storage>
+
+  <!-- 
+    if you have your own class to handle max submissions per user, you can specify here if you want it to be set globally,
+    or you set it per instance of FormModel (FormModel.MaxSubmissionsForCurrentUserHandler)
+  -->
+  <Limitations>
+    <!--<MaxSubmissionsForCurrentUserHandler type="My.Assembly.Limitations.MaxSubmissionsForCurrentUserHandler, My.Assembly" />-->
+  </Limitations>
 </FormEditor>
