--- a/Samples/Elastic storage index/FormEditor.ElasticIndex.csproj
+++ b/Samples/Elastic storage index/FormEditor.ElasticIndex.csproj
@@ -70,9 +70,9 @@
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FormEditor, Version=0.15.3.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\FormEditor.Binaries.0.15.3.1\lib\net40\FormEditor.dll</HintPath>
+    <Reference Include="FormEditor, Version=0.16.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FormEditor.Binaries.0.16.0.1\lib\net40\FormEditor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
