--- a/Grunt/package.nuspec
+++ b/Grunt/package.nuspec
@@ -7,8 +7,8 @@
     <authors>Kenn Jacobsen</authors>
     <owners>Kenn Jacobsen</owners>
     <projectUrl>http://github.com/kjac/FormEditor</projectUrl>
-    <description><![CDATA[Form Editor for Umbraco 7]]></description>
-    <tags>umbraco, form editor</tags>
+    <description><![CDATA[Form builder editor for Umbraco 7]]></description>
+    <tags>umbraco form builder editor package</tags>
     <iconUrl>https://raw.githubusercontent.com/kjac/FormEditor/master/Docs/img/logo.png</iconUrl>
     <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
     <dependencies>
