Add configurable conditions
...still needs testing!

--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -339,6 +339,7 @@
     <Compile Include="Validation\Conditions\Condition.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Validation\Conditions\CustomCondition.cs" />
     <Compile Include="Validation\Conditions\FieldIsEmptyCondition.cs">
       <SubType>Code</SubType>
     </Compile>
