--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -22,4 +22,9 @@
   <Limitations>
     <!--<MaxSubmissionsForCurrentUserHandler type="My.Assembly.Limitations.MaxSubmissionsForCurrentUserHandler, My.Assembly" />-->
   </Limitations>
+
+  <!-- add your custom conditions here -->
+  <CustomConditions>
+    <!--<Condition type="my.custom.condition" name="My custom condition" />-->
+  </CustomConditions>
 </FormEditor>
