--- a/Samples/Event handling/My.Events.csproj
+++ b/Samples/Event handling/My.Events.csproj
@@ -57,9 +57,9 @@
     <Reference Include="Examine">
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
-    <Reference Include="FormEditor, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\FormEditor.Binaries.1.1.0.0\lib\net40\FormEditor.dll</HintPath>
+    <Reference Include="FormEditor, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FormEditor.Binaries.1.1.1.0\lib\net40\FormEditor.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
