--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Rendering\ValidationData.cs" />
     <Compile Include="Row.cs" />
     <Compile Include="SerializationHelper.cs" />
+    <Compile Include="Storage\IApprovalIndex.cs" />
     <Compile Include="Storage\IFullTextIndex.cs" />
     <Compile Include="Storage\IndexHelper.cs" />
     <Compile Include="Storage\IIndex.cs" />
