--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FormEditor>
+  <!-- add your super secret token here for executing jobs (see TODO) -->
+  <Jobs authToken=""></Jobs>
+  
   <!-- add your custom fields here -->
   <CustomFields>
     <!--<Field type="my.custom.field" name="My custom field" fixedValues="false" />-->
