--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Events\FormEditorMailCancelEventArgs.cs" />
     <Compile Include="Events\FormEditorMailCancelEventHandler.cs" />
     <Compile Include="Fields\CampaignMonitorSubscriptionField.cs" />
+    <Compile Include="Fields\ConsentField.cs" />
     <Compile Include="Fields\IDefaultSelectableField.cs" />
     <Compile Include="Fields\InvisibleReCaptchaField.cs" />
     <Compile Include="Fields\MailChimpSubscriptionField.cs" />
