Begin work on dashboard

--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -256,6 +256,7 @@
   <ItemGroup>
     <Compile Include="AntiForgeryHelper.cs" />
     <Compile Include="Api\CsvExport.cs" />
+    <Compile Include="Api\DashboardController.cs" />
     <Compile Include="Api\DownloadController.cs" />
     <Compile Include="Api\JobsController.cs" />
     <Compile Include="Api\PublicController.cs" />
