--- a/Source/Solution/FormEditor/FormEditor.csproj
+++ b/Source/Solution/FormEditor/FormEditor.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Row.cs" />
     <Compile Include="SerializationHelper.cs" />
     <Compile Include="Storage\IApprovalIndex.cs" />
+    <Compile Include="Storage\IAutomationIndex.cs" />
     <Compile Include="Storage\IFullTextIndex.cs" />
     <Compile Include="Storage\IndexHelper.cs" />
     <Compile Include="Storage\IIndex.cs" />
