--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FormEditor>
-  <!-- add your super secret token here for executing jobs (see TODO) -->
+  <!-- add your super secret token here for executing jobs (see https://github.com/kjac/FormEditor/blob/master/Docs/jobs.md) -->
   <Jobs authToken=""></Jobs>
   
   <!-- add your custom fields here -->
