Add delimiter config

--- a/Source/Umbraco/Config/FormEditor.config
+++ b/Source/Umbraco/Config/FormEditor.config
@@ -27,4 +27,8 @@
   <CustomConditions>
     <!--<Condition type="my.custom.condition" name="My custom condition" />-->
   </CustomConditions>
+
+  <!-- set the delimiter here -->
+  <Delimiter>;</Delimiter>
+  
 </FormEditor>
