--- a/Samples/Advanced custom field/My.Fields.csproj
+++ b/Samples/Advanced custom field/My.Fields.csproj
@@ -74,8 +74,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Examine.0.1.68.0\lib\Examine.dll</HintPath>
     </Reference>
-    <Reference Include="FormEditor, Version=1.3.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FormEditor.Binaries.1.3.0.1\lib\net40\FormEditor.dll</HintPath>
+    <Reference Include="FormEditor, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FormEditor.Binaries.1.3.1.0\lib\net40\FormEditor.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -298,7 +298,9 @@
     <Content Include="App_Plugins\FormEditor\editor\fields\my.range.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config">
